--- a/index.html
+++ b/index.html
@@ -27,6 +27,42 @@
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
         <hr>   
+      <div class="clothes-pics">
+          <div class="row">
+            <figure class="col-md-4"><img src="images/model1.jpg">
+              <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
+            </figure>
+            <figure class="col-md-4"><img src="images/model2.jpg">
+              <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
+            </figure>
+            <figure class="col-md-4"><img src="images/model3.jpg">
+              <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
+            </figure>
+          </div>
+          <div class="row">
+            <figure class="col-md-4"><img src="images/model2.jpg">
+              <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
+            </figure>
+            <figure class="col-md-4"><img src="images/model3.jpg">
+              <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
+            </figure>
+            <figure class="col-md-4"><img src="images/model1.jpg">
+              <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
+            </figure>
+          </div>
+          <div class="row">
+            <figure class="col-md-4"><img src="images/model3.jpg">
+              <figcaption>BlackBird Jacket - <strong>$135</strong></figcaption>
+            </figure>
+            <figure class="col-md-4"><img src="images/model1.jpg">
+              <figcaption>BlackBird Sweater - <strong>$135</strong></figcaption>
+            </figure>
+            <figure class="col-md-4"><img src="images/model2.jpg">
+              <figcaption>BlackBird Trousers - <strong>$135</strong></figcaption>
+            </figure>
+          </div>
+        </div>
+         
       </article>
     </section>
    
