--- a/index.html
+++ b/index.html
@@ -62,9 +62,20 @@
             </figure>
           </div>
         </div>
+         <h1>Clothing Store</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <hr>
+        <div class="large-window">
+          <div class="window-tint">
+          </div>
+        </div>
          
+         <div style="height: 2000px"></div>  
       </article>
     </section>
+
+ 
    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
        <!-- Latest compiled and minified JavaScript -->
