Add promo text. A promotional message will appear over the large-window when scrolling down.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <hr>
         <div class="large-window">
           <div class="window-tint">
+            <div class="promo-text">Fall Suits<strong><span>from</span> $99</strong><a href="" class="window-cta">Shop Now</a></div>
           </div>
         </div>
          
