--- a/index.html
+++ b/index.html
@@ -62,13 +62,39 @@
             </figure>
           </div>
         </div>
-         <h1>Clothing Store</h1>
+         <h1>Fine Tayloring</h1>
         <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
         <hr>
         <div class="large-window">
           <div class="window-tint">
             <div class="promo-text">Fall Suits<strong><span>from</span> $99</strong><a href="" class="window-cta">Shop Now</a></div>
+          </div>
+        </div>
+
+        <h1>Rich History</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+        <hr>
+
+        <div class="blog-posts row">
+          <div class="col-md-3 post  post-1">
+            <h5>Post Title</h5>
+            <img src="images/posts/one.jpg">
+            <p>Incididunt ut labore et dolore magna.</p>
+            <p><a href="" class="btn btn-default">Read More</a></p>
+          </div>
+          <div class="col-md-3 post post-2">
+            <h5>Post Title</h5>
+            <img src="images/posts/two.jpg">
+            <p>Lorem ipsum dolor sit amet dolore ipsum.</p>
+            <p><a href="" class="btn btn-default">Read More</a></p>
+          </div>
+          <div class="col-md-3 post  post-3">
+            <h5>Post Title</h5>
+            <img src="images/posts/three.jpg">
+            <p>Duis aute irure dolor in reprehenderit.</p>
+            <p><a href="" class="btn btn-default">Read More</a></p>
           </div>
         </div>
          
