--- a/index.html
+++ b/index.html
@@ -97,10 +97,36 @@
             <p><a href="" class="btn btn-default">Read More</a></p>
           </div>
         </div>
-         
-         <div style="height: 2000px"></div>  
       </article>
+      <footer>
+      <div class="row footer-stuff">
+        <div class="col-md-3"><strong>FIND US ON</strong>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Pinterest</a></li>
+            <li><a href="">Instagram</a></li>
+        </div>
+        <div class="col-md-3"><strong>OTHER SHOPS</strong>
+            <li><a href="">Red Robin</a></li>
+            <li><a href="">Emerald Eagle</a></li>
+            <li><a href="">Crimson Crane</a></li>
+            <li><a href="">Auburn Abbot</a></li>
+        </div>
+        <div class="col-md-6">
+          <p><strong>Sign Up for the newsletter</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <form class="row">
+            <div class="col-md-8">
+              <input type="email" placeholder="Your Email" class="form-control">
+            </div>
+            <div class="col-md-4">
+              <input type="submit" class="btn btn-info">
+            </div>
+          </form>
+        </div>
+      </div>
+    </footer>
     </section>
+    
 
  
    
